--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "com.squareup.okhttp3:okhttp:4.3.1"
     testImplementation 'junit:junit:4.12'
