--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "com.squareup.okhttp3:okhttp:4.3.1"
+    implementation "org.jsoup:jsoup:1.11.3"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
